[FIX] user add fix

--- a/Readiculous.WebApp/Views/Shared/_Footer.cshtml
+++ b/Readiculous.WebApp/Views/Shared/_Footer.cshtml
@@ -1,4 +1,4 @@
-﻿@using static Readiculous.Resources.Views.Screen
+﻿﻿@using static Readiculous.Resources.Views.Screen
 @{
     var height = ViewData["FooterHeight"] ?? "60px";
     <!-- Slightly taller for better centering -->
