--- a/Readiculous.WebApp/Views/Shared/_LoginModal.cshtml
+++ b/Readiculous.WebApp/Views/Shared/_LoginModal.cshtml
@@ -24,8 +24,8 @@
                 <button type="submit" class="btn btn-primary w-100 mb-2">Sign In</button>
 
                 <div class="text-center small">
-                    <a href="javascript:void(0);" onclick="showModal('forgot')">Forgot Password?</a><br />
-                    Don’t have an account?
+                    <a href="javascript:void(0);" onclick="switchModal('#loginModal', '#forgotPasswordModal')">Forgot Password?</a><br />
+                    Don't have an account?
                     <a href="javascript:void(0);" onclick="switchModal('#loginModal', '#registerModal')">Sign up</a>
                 </div>
             </form>
