--- a/Readiculous.WebApp/Views/Shared/_EditProfileModal.cshtml
+++ b/Readiculous.WebApp/Views/Shared/_EditProfileModal.cshtml
@@ -5,7 +5,7 @@
 </div>
 
 <div class="modal-body">
-    <form id="editProfileForm" asp-controller="Home" asp-action="EditProfile" method="POST" enctype="multipart/form-data">
+    <form id="editProfileForm" asp-controller="Dashboard" asp-action="EditProfile" method="POST" enctype="multipart/form-data">
         <input type="hidden" asp-for="UserId" />
         <input type="hidden" asp-for="CreatedBy" />
         <input type="hidden" asp-for="CreatedTime" />
