--- a/Readiculous.WebApp/Views/Shared/_Header.cshtml
+++ b/Readiculous.WebApp/Views/Shared/_Header.cshtml
@@ -18,7 +18,7 @@
                 <ul>
                     <li>
                         <i class="fa-solid fa-gear"></i>
-                        <a asp-action="EditProfile" asp-controller="Home">Edit Profile</a>
+                        <a href="#" class="open-edit-profile">Edit Profile</a>
                     </li>
                     <li>
                         <i class="fa-solid fa-right-from-bracket"></i>
