--- a/Readiculous.WebApp/Views/Shared/_RegisterModal.cshtml
+++ b/Readiculous.WebApp/Views/Shared/_RegisterModal.cshtml
@@ -4,31 +4,23 @@
 
             <button type="button" class="btn-close ms-auto" data-bs-dismiss="modal" aria-label="Close"></button>
 
-            <form id="registerForm" novalidate>
+            <div class="text-center">
+                <img src="~/img/png-logo.png" class="auth-icon mb-2" alt="Logo" style="width:60px;" />
+                <h2 class="h5 mb-3">Create Your Account</h2>
+            </div>
 
-
-                <div class="text-center">
-                    <img src="~/img/png-logo.png" class="auth-icon mb-2" alt="Logo" style="width:60px;" />
-                    <h2 class="h5 mb-3">Register to Readiculous</h2>
-                </div>
-
+            <form id="registerForm" method="post" asp-action="RequestOtp" asp-controller="Account">
                 <div id="registerError" class="text-danger small mb-2" style="display:none;"></div>
 
                 <div class="mb-2">
-                    <input name="Email" class="form-control" placeholder="Email" />
-                </div>
-                <div class="mb-2">
-                    <input name="Password" type="password" class="form-control" placeholder="Password" />
-                </div>
-                <div class="mb-2">
-                    <input name="ConfirmPassword" type="password" class="form-control" placeholder="Confirm Password" />
+                    <input name="Email" type="email" class="form-control" placeholder="Email Address" autocomplete="off" required />
                 </div>
 
                 <button type="submit" class="btn btn-primary w-100 mb-2">Sign Up</button>
 
                 <div class="text-center small">
                     Already have an account?
-                    <a href="javascript:void(0);" onclick="switchModal('#registerModal', '#loginModal')">Log in</a>
+                    <a href="javascript:void(0);" onclick="switchModal('#registerModal', '#loginModal')">Sign In</a>
                 </div>
             </form>
         </div>
